--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -37,21 +37,23 @@ h1 {
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
+  border: 0px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  background-color: #646cff !important;
+  color: rgba(255, 255, 255, 0.932);
 }
 button:hover {
   border-color: #646cff;
+  opacity: 0.8;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+
+input:focus {
+  border: 1px solid blue !important; 
 }
 
 @media (prefers-color-scheme: light) {
@@ -65,4 +67,22 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.glass-effect {
+  background: rgba(118, 151, 244, 0.4);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10.4px);
+  -webkit-backdrop-filter: blur(10.4px);
+  border: 1px solid rgba(0, 0, 0, 0.44);
+}
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 1;
 }
